--- a/app/src/main/res/layout/activity_jumat.xml
+++ b/app/src/main/res/layout/activity_jumat.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.asepmohamadnoor.jadwal2ia10.JumatActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/lepkom"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@drawable/lepkom"/>
+
+    <TextView
+        android:id="@+id/tKursus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="KURSUS LEPKOM GUNADARMA"
+        android:textSize="25sp"
+        android:layout_below="@+id/lepkom"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="80dp"
+        android:textColor="#7eec7c"
+        android:gravity="center"
+        android:fontFamily="serif-monospace"
+        />
+
+
+
+</RelativeLayout>
